2007-06-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/collector.in: Now multiple collector instances can run
	in a single tree. Need to recompile all trees and re-start the
	daemons. A new copy of init.d/torrus should be copied
	in startup scripts directory. Also execute for every tree:
	torrus si --tree=TREE --clear
	

2007-06-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: Perl 5.8.8 is required for threads

2007-06-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/genreport.in: New option: --all2tree

	* perllib/Torrus/DevDiscover/Alteon.pm: New discovery module

2007-06-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Cisco CAR statistics

2007-05-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm:
	fixed the bug for unreachable timeout
	the target that receives noSuchObject is deleted from polling

2007-05-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/CDef.pm: Imported the CDEF collector
	from Chrstian Schnidrig and adapted to multithreading.

	* perllib/Torrus/DevDiscover.pm: Adapted for global configuration.

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New discovery parameter: RFC2863_IF_MIB::traffic-summaries
	Currently summaries work only within single output file.
	

2007-04-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm: Search engine GUI

2007-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/buildsearchdb.in: The search DB builder (GUI is not ready yet)

	* perllib/Torrus/DevDiscover.pm:
	New discovery param: show-recursive

	* templates/default-dir.html: Limit recursive view to
	subtrees having show-recursive=yes

2007-04-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm:
	Moved the param properties to the XML config.